Extracted JournalAbbreviationRepository from LayoutFormatterPreferences